--- a/app/src/main/res/layout/activity_log_reg.xml
+++ b/app/src/main/res/layout/activity_log_reg.xml
@@ -139,10 +139,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginStart="10dp"
             android:textColor="@android:color/white"
             android:text="Password"
-            android:layout_marginStart="10dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/etPasswordLogin"
             app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />
 
         <EditText
